style.scss
---
---

// TODO: Serve our own copies of the fonts? A lot of people will have it cached.
@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600);

@import "bootstrap/normalize";

@font-face {
		font-family: sandstorm;
		src: url(/fonts/sandstorm.woff);
}

// =======================================================================================
// Reusable Mixins

@mixin stripe {
  // Makes a stripe behind this element extending to both edges of the viewport. You can customize
  // vertical positioning (top, bottom) and background color, e.g.:
  //
  // @include stripe {
  //   top: 10px;
  //   background-color: purple;
  // }

  position: relative;
  &::after {
    display: block;
    content: " ";
    position: absolute;
    top: 0;
    bottom: 0;

    left: calc(50% - 50vw);
    width: 100vw;
    z-index: -1;

    @content;
  }
}

@mixin stripe-left {
  // Like "stripe" but only extends to the left of the element.

  @include stripe {
    left: auto;
    right: 100%;
    width: calc(50vw - 50%);  // half viewport width minus half container width
    @content;
  }
}

@mixin stripe-right {
  // Like "stripe" but only extends to the right of the element.

  @include stripe {
    left: 100%;
    width: calc(50vw - 50%);  // half viewport width minus half container width
    @content;
  }
}

$purple-band: #eee;
$lightpurple-band: #F6F2FC;
$default-fontcolor: black;
$puplebg-fontcolor: #302851;
$whitebutton-border: #a19cbc;
$whitebutton-hover: #f1ebff;
$purplebutton-bg: #442672;
$purple-link: #5b4f8c;
$purple-highlight: #7757bc;
$purplehover-bg: #6341a5;
$header-bg: #2e2765;
$lightpurple-text: #c8b5e5;

// =======================================================================================

* {
  // Make the box model match what you'd expect: padding and border are counted in "width".
  box-sizing: border-box;
}

body {
  font-family: "Source Sans Pro", sans-serif;
  font-size: 17px;
  font-weight: 300;
  color: $default-fontcolor;

  // Some elements have stripes extending out from the edge of their container to the edge of the
  // screen. We precisely calculate how large these stripes should be based on the viewport width.
  // Unfortunately the viewport width does not include the vertical scroll bar, if there is one,
  // and as a result as soon as a vertical scrollbar appears, a horizontal one will appear too,
  // just so that we can see the damned stripes. So, we explicitly disable horizontal scrolling to
  // prevent this.
  overflow-x: hidden;
}

body>* {
  // 1px top padding prevents margin collapsing. We can't use overflow: hidden because it hides our
  // stripes.
  padding: 1px 30px 0;
  margin: 0 auto;
  width: auto;
  max-width: 1200px;
  
  @media (max-width: 800px) {
    padding: 1px 20px 0;  
  }
}

h1 {
  padding-top: 30px;
  font-size: 40px;
  font-weight: 300;
  text-align: center;
}

h2, h3, h4, h5, h6 {
  font-weight: normal;
}

p {
  line-height: 1.3;
}

a {
  text-decoration: none;
  color: $purple-link;
  font-weight: normal;

    &:hover {
      color: $purple-highlight;
    }
}

strong {
	font-weight: 500;
}

// =======================================================================================
// _layout/page.html

body>nav {
  height: 48px;
  text-align: right;
  font-size: 16px;
  overflow: hidden;

  >a {
    display: inline-block;
    height: 100%;
    padding: 0 15px;
    line-height: 48px;
    font-weight: 300;
    color: $default-fontcolor;

    &:first-child {
      float: left;
    }

    &:hover {
      background-color: #f8f8ff;
      color: #18003f;
    }

    @media (max-width: 550px) {
      &[href^="/news"] { display: none; }
      &[href="/features"] { display: none; }
    }
    @media (max-width: 900px) {
      &[href^="/get"] { display: none; }
      &[href="/community"] { display: none; }
      &[href^="https://docs.sandstorm.io"] { display: none; }
    }
  }
}

body#home>nav>a[href="/"] { font-weight: 500; }

body>nav>a[href="/"] {
	&::before {
		font-family: sandstorm;
		display: inline-block;
		float: left;
		content: "\e906";
		font-size: 26px;
		line-height: 45px;
		padding: 0 5px 0 0;
	}
}

body#get>nav>a[href="/get"] { font-weight: 500; }
body#features>nav>a[href="/features"] { font-weight: 500; }
body#how-it-works>nav>a[href="/how-it-works"] { font-weight: 500; }
body#blog>nav>a[href="/news/"] { font-weight: 500; }
body#community>nav>a[href="/community"] { font-weight: 500; }
body#about>nav>a[href="/about"] { font-weight: 500; }

body>header {
  min-height: 180px;
  color: white;

  p {
    text-align: center;
    font-size: 22px;
    padding: 0 0 20px 0;
    color: $lightpurple-text;
  }
}

body>section {
  h2 {
    margin: 50px 0 20px 0;
    text-align: center;
    font-size: 36px;
  }
  h3 {
    text-align: center;
    font-size: 25px;
    font-weight: 300;
  }
  >ul {
    list-style: none;
  }
}
/* ... */

